
[metadata]
name = 
version = 0.0.1
author = Anthony Ozier-Lafontaine
author_email = anthony.ozier-lafontaine@ec-nantes.fr
description = Package implementing efficient kernel tests such as MMD or mKFDR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnthoOzier/ktest.git
project_urls =
    Bug Tracker = https://github.com/AnthoOzier/ktest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
