[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ktest"
version = "1.3.1"
authors = [
    {name = "Anthony Ozier-Lafontaine", email = "anthony.ozier-lafontaine@ec-nantes.fr"},
    {name = "Polina Arsenteva", email = "polina.arsenteva@ens-lyon.fr"},
    {name = "Ghislain Durif", email = "ghislain.durif@ens-lyon.fr"}
]
license = {text = "MIT License"}
description = "Package implementing efficient kernel tests such as MMD or KFDA"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "torch>=2.2.0; sys_platform != 'darwin'",
    "torch>=2.2.0; sys_platform == 'darwin' and platform_machine != 'x86_64'",
    "torch>=2.2.0,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "joblib",
    "matplotlib",
    "adjustText",
    "kmeans_pytorch",
    "tqdm",
    "dill>=0.3.5.1",
    "natsort>=8.2.0",
]

[dependency-groups]
dev = [
    "ipython>=7.16.3",
    "pytest>=7.0.1",
    "scikit-learn>=0.24.2",
    "seaborn>=0.11.2",
    "toml>=0.10.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/LMJL-Alea/ktest.git"
"Bug Tracker" = "https://github.com/LMJL-Alea/ktest/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src/ktest"
]
exclude = [
    "/dev",
    "/fig"
]

[tool.hatch.build.targets.wheel]
only-packages = true

